--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 		<title>Quiz - HTML, CSS, and JS Basics</title>
 		<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/layout.css">
-		<link rel="stylesheet" type="text/css" href="style2.css">
+		<link rel="stylesheet" type="text/css" href="css/style2.css">
 	</head>
 	<body>
 		<header>
